# LabAlgorithm

./: CMakeLists.txt  main.cpp
Kits/: Swapper.hpp  TextUtils.hpp
Sort/: ISorter.h  S001_BubbleSort.cpp  S001_BubbleSort.h  S002_SelectionSort.cpp  S002_SelectionSort.h  S003_InsertionSort.cpp  S003_InsertionSort.h  S004_ShellSort.cpp  S004_ShellSort.h  S005_MergeSort.cpp  S005_MergeSort.h  S006_QuickSort.cpp  S006_QuickSort.h
Temp/: CMakeLists.txt  TempMain.cpp  TempMain.h
Tester/: SortTester.hpp
